--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,9 @@ body {
   box-sizing: border-box;
   height: 100vh;
   width: 100vw;
-  font-family: "Mulish", sans-serif;
-  overflow-x: hidden; }
+  font-family: "Mulish";
+  overflow-x: hidden;
+  user-select: none; }
 
 a,
 li {
@@ -76,7 +77,7 @@ header {
       justify-content: center;
       align-items: center;
       justify-content: space-between;
-      width: 9.5rem;
+      width: 160px;
       margin-bottom: 50px; }
       header .nav_logo h1 {
         font-size: 24px; }
@@ -85,8 +86,8 @@ header {
         justify-content: center;
         align-items: center;
         background-color: #458FF6;
-        height: 40px;
-        width: 40px;
+        width: 41px;
+        height: 41px;
         padding: 2;
         text-align: center;
         border-radius: 2rem;
@@ -95,12 +96,7 @@ header {
           font-size: 26px; }
       @media screen and (min-width: 768px) {
         header .nav_logo {
-          margin-bottom: 0;
-          margin-right: 50px; } }
-      @media screen and (min-width: 1024px) {
-        header .nav_logo {
-          margin-bottom: 0;
-          margin-right: 200px; } }
+          margin-bottom: 0; } }
     header .nav_menu {
       position: absolute;
       display: flex;
@@ -118,6 +114,14 @@ header {
       header .nav_menu.open {
         transition: all 0.4s ease-in-out;
         transform: translateY(0); }
+      header .nav_menu .nav_menu_list {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-flow: column wrap; }
+        @media screen and (min-width: 768px) {
+          header .nav_menu .nav_menu_list {
+            flex-flow: row wrap; } }
       header .nav_menu_item {
         margin-top: 15px;
         padding: 6px 30px 6px 15px;
@@ -154,9 +158,11 @@ header {
             margin-left: 35px; } }
       @media screen and (min-width: 768px) {
         header .nav_menu {
+          width: 84vw;
           transform: translateY(0);
           height: max-content;
           flex-direction: row;
+          justify-content: space-between;
           padding: 40px 0 25px 0;
           background-color: white;
           opacity: 100%;
@@ -166,7 +172,11 @@ header {
       transform: translateY(0); }
     @media screen and (min-width: 768px) {
       header .nav {
-        visibility: visible; } }
+        visibility: visible;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100px; } }
 
 .nav_menu_item:nth-child(1) {
   transition-delay: 0.25s; }
@@ -183,6 +193,15 @@ header {
 .nav_menu_item:nth-child(5) {
   transition-delay: 0.65s; }
 
+.element {
+  position: absolute;
+  left: -20px;
+  top: 8rem; }
+  .element img {
+    object-fit: contain;
+    height: 115px;
+    width: 131px; }
+
 .main {
   overflow-x: hidden;
   z-index: 1;
@@ -192,7 +211,7 @@ header {
   width: 100vw; }
   .main_section {
     position: absolute;
-    top: 5rem;
+    top: 8rem;
     width: 100vw;
     display: flex;
     justify-content: center;
@@ -218,7 +237,7 @@ header {
       @media screen and (min-width: 768px) {
         .main_section_item_text {
           width: 28rem;
-          margin-top: 5rem;
+          margin-top: 104px;
           text-align: start; }
           .main_section_item_text h1 {
             font-size: 25px;
@@ -230,17 +249,20 @@ header {
             width: 17rem; } }
       @media screen and (min-width: 1024px) {
         .main_section_item_text {
-          width: 28rem;
-          margin-top: 5rem;
+          width: 446px;
+          margin-top: 104px;
           text-align: start; }
           .main_section_item_text h1 {
-            font-size: 28px;
-            line-height: 40px;
-            width: 17rem; }
+            font-weight: 700;
+            font-size: 48px;
+            line-height: 56px;
+            width: 426px; }
           .main_section_item_text h2 {
-            font-size: 18px;
-            line-height: 27px;
-            width: 26rem; } }
+            font-weight: 500;
+            font-size: 21px;
+            line-height: 32px;
+            color: #7D7987;
+            width: 466px; } }
       .main_section_item_image {
         margin-top: 50px; }
         .main_section_item_image img {
@@ -256,8 +278,8 @@ header {
           .main_section_item_image {
             margin-top: 0; }
             .main_section_item_image img {
-              height: 30rem;
-              width: 30rem; } }
+              width: 693px;
+              height: 598px; } }
       .main_section_item_button {
         position: absolute;
         bottom: 3rem; }
@@ -269,12 +291,29 @@ header {
           text-align: center;
           font-size: 14px;
           letter-spacing: 1px;
-          font-weight: 600;
+          font-weight: 500;
           cursor: pointer;
           border: none; }
         @media screen and (min-width: 768px) {
           .main_section_item_button {
-            top: 25rem; } }
+            top: 13rem; } }
+        @media screen and (min-width: 1024px) {
+          .main_section_item_button {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+            text-align: center; }
+            .main_section_item_button button {
+              width: 200px;
+              height: 60px;
+              border-radius: 55px;
+              font-weight: 500;
+              font-size: 18px;
+              background: #458FF6; }
+              .main_section_item_button button:hover {
+                transition: all 0.4s ease-in-out;
+                background-color: #3772C2; } }
       @media screen and (min-width: 768px) {
         .main_section_item {
           flex-flow: row;
@@ -285,21 +324,22 @@ header {
         .main_section_item {
           flex-flow: row;
           align-items: start;
-          width: 70vw;
+          width: 80vw;
           justify-content: space-between; } }
     @media screen and (min-width: 768px) {
       .main_section {
         margin-top: 2rem; } }
 
 .service_section {
+  margin-top: 150px;
   position: relative; }
   .service_section .shadow img {
+    left: -150px;
+    top: 14rem;
     position: absolute;
-    top: 12rem;
-    z-index: 1;
-    left: 0;
-    width: 30rem;
-    height: 25rem; }
+    z-index: -1;
+    width: 937px;
+    height: 671px; }
   @media screen and (min-width: 768px) {
     .service_section .shadow {
       top: 13rem;
@@ -308,7 +348,6 @@ header {
         width: 60rem;
         height: 40rem; } }
   .service_section_item {
-    margin-top: 2rem;
     padding: 10px 16px 10px 10px;
     display: flex;
     justify-content: center;
@@ -322,20 +361,33 @@ header {
       text-align: center;
       padding: 0 6px 0 6px; }
       .service_section_item_heading h1 {
-        font-size: 25px;
-        line-height: 50px; }
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 56px; }
       .service_section_item_heading hr {
-        height: 3px;
+        height: 1px;
         background-color: black;
-        width: 3.5rem; }
+        width: 3.6rem; }
       .service_section_item_heading h2 {
         text-align: center;
-        margin-top: 30px;
+        margin-top: 35px;
         font-size: 16px;
         line-height: 24px; }
       @media screen and (min-width: 768px) {
         .service_section_item_heading {
-          width: 60vw; } }
+          width: 64vw; }
+          .service_section_item_heading h1 {
+            font-weight: 700;
+            font-size: 36px;
+            line-height: 100px; }
+          .service_section_item_heading h2 {
+            font-weight: 300;
+            font-size: 18px;
+            line-height: 30px;
+            /* or 167% */
+            text-align: center;
+            color: #7D7987;
+            mix-blend-mode: normal; } }
     .service_section_item_container {
       margin-top: 50px;
       margin-bottom: 50px;
@@ -347,32 +399,44 @@ header {
         overflow: hidden;
         padding: 40px 15px 40px 15px; }
       .service_section_item_container .card {
-        border-radius: 10px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        height: 45vh;
-        background-color: #fff; }
+        transition: all 0.4s ease-in-out; }
         .service_section_item_container .card_content {
+          box-shadow: 10px 40px 50px rgba(229, 233, 246, 0.4);
           display: flex;
           justify-content: center;
           align-items: center;
+          justify-content: start;
           flex-flow: column wrap;
-          padding: 10px 14px;
-          align-items: start; }
+          padding-left: 10px;
+          align-items: start;
+          width: 350px;
+          height: 354px;
+          background: #FFFFFF;
+          /* drop shadow */
+          border-radius: 20px; }
           .service_section_item_container .card_content_image {
-            margin-top: 20px;
             margin-left: 20px; }
             .service_section_item_container .card_content_image img {
               object-fit: contain;
-              height: 60px;
-              width: 60px; }
+              height: 90px;
+              width: 90px; }
           .service_section_item_container .card_content div {
-            padding: 5px 10px 5px 10px; }
+            margin-left: 20px;
+            margin-top: 40px;
+            width: 280px; }
             .service_section_item_container .card_content div h2 {
-              font-size: 18px;
-              line-height: 50px; }
+              font-size: 24px;
+              line-height: 56px; }
             .service_section_item_container .card_content div h3 {
-              font-size: 15px;
-              line-height: 22px; }
+              font-weight: 300;
+              font-size: 16px;
+              line-height: 28px;
+              /* or 175% */
+              color: #7D7987; }
+        @media screen and (min-width: 768px) {
+          .service_section_item_container .card {
+            margin-left: 40px;
+            margin-right: 40px; } }
     .service_section_item .swiper-navBtn:hover {
       color: #4070F4; }
     .service_section_item .swiper-navBtn {
