--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,9 @@ body {
   width: 100vw;
   font-family: "Mulish";
   overflow-x: hidden;
-  user-select: none; }
+  user-select: none;
+-webkit-tap-highlight-color: transparent;
+ }
 
 a,
 li {
