--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@ body {
   width: 100vw;
   font-family: "Mulish";
   overflow-x: hidden;
-  user-select: none; }
+  user-select: none;
+  -webkit-tap-highlight-color: transparent; }
 
 a,
 li {
@@ -176,7 +177,8 @@ header {
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 100px; } }
+        height: 100px;
+        background-color: white; } }
 
 .nav_menu_item:nth-child(1) {
   transition-delay: 0.25s; }
@@ -196,11 +198,20 @@ header {
 .element {
   position: absolute;
   left: -20px;
-  top: 8rem; }
+  top: 1rem; }
   .element img {
     object-fit: contain;
-    height: 115px;
-    width: 131px; }
+    height: 100px;
+    width: 100px; }
+  @media screen and (min-width: 768px) {
+    .element {
+      position: absolute;
+      left: -20px;
+      top: 8rem; }
+      .element img {
+        object-fit: contain;
+        height: 115px;
+        width: 131px; } }
 
 .main {
   overflow-x: hidden;
@@ -224,45 +235,48 @@ header {
       align-items: center;
       justify-content: start;
       flex-flow: column wrap;
-      padding: 10px 16px 10px 10px;
       height: 40rem;
       text-align: center; }
-      .main_section_item_text h1 {
-        font-size: 25px;
-        line-height: 60px; }
-      .main_section_item_text h2 {
-        margin-top: 30px;
-        font-size: 16px;
-        line-height: 24px; }
-      @media screen and (min-width: 768px) {
-        .main_section_item_text {
-          width: 28rem;
-          margin-top: 104px;
-          text-align: start; }
-          .main_section_item_text h1 {
-            font-size: 25px;
-            line-height: 36px;
-            width: 14rem; }
-          .main_section_item_text h2 {
-            font-size: 16px;
-            line-height: 27px;
-            width: 17rem; } }
-      @media screen and (min-width: 1024px) {
-        .main_section_item_text {
-          width: 446px;
-          margin-top: 104px;
-          text-align: start; }
-          .main_section_item_text h1 {
-            font-weight: 700;
-            font-size: 48px;
-            line-height: 56px;
-            width: 426px; }
-          .main_section_item_text h2 {
-            font-weight: 500;
-            font-size: 21px;
-            line-height: 32px;
-            color: #7D7987;
-            width: 466px; } }
+      .main_section_item_text {
+        padding: 0 10px 0 10px; }
+        .main_section_item_text h1 {
+          font-size: 20px;
+          line-height: 50px; }
+        .main_section_item_text h2 {
+          margin-top: 20px;
+          font-size: 16px;
+          line-height: 26px;
+          color: #7D7987; }
+        @media screen and (min-width: 768px) {
+          .main_section_item_text {
+            width: 28rem;
+            margin-top: 104px;
+            text-align: start; }
+            .main_section_item_text h1 {
+              font-size: 25px;
+              line-height: 36px;
+              width: 14rem; }
+            .main_section_item_text h2 {
+              font-size: 16px;
+              line-height: 27px;
+              width: 16rem;
+              color: #7D7987; } }
+        @media screen and (min-width: 1024px) {
+          .main_section_item_text {
+            width: 446px;
+            margin-top: 104px;
+            text-align: start; }
+            .main_section_item_text h1 {
+              font-weight: 700;
+              font-size: 48px;
+              line-height: 56px;
+              width: 426px; }
+            .main_section_item_text h2 {
+              font-weight: 500;
+              font-size: 21px;
+              line-height: 32px;
+              color: #7D7987;
+              width: 466px; } }
       .main_section_item_image {
         margin-top: 50px; }
         .main_section_item_image img {
@@ -282,8 +296,10 @@ header {
               height: 598px; } }
       .main_section_item_button {
         position: absolute;
-        bottom: 3rem; }
+        bottom: 0;
+        border-radius: 40px; }
         .main_section_item_button button {
+          position: relative;
           padding: 12px 30px 12px 30px;
           background-color: #458FF6;
           color: white;
@@ -294,11 +310,50 @@ header {
           font-weight: 500;
           cursor: pointer;
           border: none; }
+          .main_section_item_button button:hover {
+            transition: all 0.4s ease-in-out;
+            background-color: #3772C2; }
+          .main_section_item_button button::after {
+            content: "";
+            display: block;
+            position: absolute;
+            border-radius: 4em;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            transition: all 0.4s ease-in-out;
+            box-shadow: 0 0 10px 40px #3772C2; }
+          .main_section_item_button button:active:after {
+            box-shadow: 0 0 0 0 white;
+            position: absolute;
+            border-radius: 4em;
+            left: 0;
+            top: 0;
+            opacity: 1;
+            transition: 0s; }
+          .main_section_item_button button:active {
+            top: 0; }
         @media screen and (min-width: 768px) {
           .main_section_item_button {
-            top: 13rem; } }
+            top: 13rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+            text-align: center; }
+            .main_section_item_button button {
+              width: 190px;
+              height: 50px;
+              padding: 12px 20px 12px 20px;
+              border-radius: 55px;
+              font-weight: 500;
+              font-size: 16px;
+              background: #458FF6; } }
         @media screen and (min-width: 1024px) {
           .main_section_item_button {
+            top: 13rem;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -310,10 +365,7 @@ header {
               border-radius: 55px;
               font-weight: 500;
               font-size: 18px;
-              background: #458FF6; }
-              .main_section_item_button button:hover {
-                transition: all 0.4s ease-in-out;
-                background-color: #3772C2; } }
+              background: #458FF6; } }
       @media screen and (min-width: 768px) {
         .main_section_item {
           flex-flow: row;
@@ -348,7 +400,6 @@ header {
         width: 60rem;
         height: 40rem; } }
   .service_section_item {
-    padding: 10px 16px 10px 10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -362,17 +413,19 @@ header {
       padding: 0 6px 0 6px; }
       .service_section_item_heading h1 {
         font-weight: 700;
-        font-size: 36px;
+        font-size: 26px;
         line-height: 56px; }
       .service_section_item_heading hr {
         height: 1px;
         background-color: black;
         width: 3.6rem; }
       .service_section_item_heading h2 {
+        padding: 0 20px 0 20px;
         text-align: center;
         margin-top: 35px;
         font-size: 16px;
-        line-height: 24px; }
+        line-height: 24px;
+        color: #7D7987; }
       @media screen and (min-width: 768px) {
         .service_section_item_heading {
           width: 64vw; }
@@ -381,6 +434,7 @@ header {
             font-size: 36px;
             line-height: 100px; }
           .service_section_item_heading h2 {
+            padding: 0;
             font-weight: 300;
             font-size: 18px;
             line-height: 30px;
@@ -392,14 +446,15 @@ header {
       margin-top: 50px;
       margin-bottom: 50px;
       width: 100%;
-      max-width: 92.5vw;
-      margin-left: 0; }
+      max-width: 100vw; }
       .service_section_item_container_slide {
         margin: 0 30px;
         overflow: hidden;
-        padding: 40px 15px 40px 15px; }
+        padding: 40px 15px 45px 15px; }
       .service_section_item_container .card {
-        transition: all 0.4s ease-in-out; }
+        display: flex;
+        justify-content: center;
+        align-items: center; }
         .service_section_item_container .card_content {
           box-shadow: 10px 40px 50px rgba(229, 233, 246, 0.4);
           display: flex;
@@ -409,34 +464,58 @@ header {
           flex-flow: column wrap;
           padding-left: 10px;
           align-items: start;
-          width: 350px;
-          height: 354px;
+          width: 250px;
+          height: 254px;
           background: #FFFFFF;
           /* drop shadow */
           border-radius: 20px; }
           .service_section_item_container .card_content_image {
-            margin-left: 20px; }
+            margin-left: 10px; }
             .service_section_item_container .card_content_image img {
               object-fit: contain;
-              height: 90px;
-              width: 90px; }
+              height: 40px;
+              width: 40px; }
+            @media screen and (min-width: 768px) {
+              .service_section_item_container .card_content_image {
+                margin-left: 20px; }
+                .service_section_item_container .card_content_image img {
+                  object-fit: contain;
+                  height: 90px;
+                  width: 90px; } }
           .service_section_item_container .card_content div {
-            margin-left: 20px;
-            margin-top: 40px;
-            width: 280px; }
+            margin-left: 10px;
+            margin-top: 30px;
+            width: 200px;
+            margin-left: 20px; }
             .service_section_item_container .card_content div h2 {
-              font-size: 24px;
-              line-height: 56px; }
+              font-size: 16px;
+              line-height: 46px; }
             .service_section_item_container .card_content div h3 {
               font-weight: 300;
-              font-size: 16px;
-              line-height: 28px;
+              font-size: 13px;
+              line-height: 25px;
               /* or 175% */
               color: #7D7987; }
-        @media screen and (min-width: 768px) {
-          .service_section_item_container .card {
-            margin-left: 40px;
-            margin-right: 40px; } }
+            @media screen and (min-width: 768px) {
+              .service_section_item_container .card_content div {
+                margin-left: 20px;
+                margin-top: 40px; }
+                .service_section_item_container .card_content div h2 {
+                  font-size: 24px;
+                  line-height: 56px; }
+                .service_section_item_container .card_content div h3 {
+                  font-weight: 300;
+                  font-size: 16px;
+                  line-height: 28px;
+                  /* or 175% */
+                  color: #7D7987; } }
+          @media screen and (min-width: 768px) {
+            .service_section_item_container .card_content {
+              width: 350px;
+              height: 354px; } }
+      @media screen and (min-width: 768px) {
+        .service_section_item_container {
+          max-width: 92vw; } }
     .service_section_item .swiper-navBtn:hover {
       color: #4070F4; }
     .service_section_item .swiper-navBtn {
@@ -450,7 +529,7 @@ header {
     .service_section_item .swiper-navBtn::after {
       font-size: 35px; }
     .service_section_item .swiper-button-next {
-      right: 0; }
+      right: -8px; }
     .service_section_item .swiper-button-prev {
       left: 0; }
     .service_section_item .swiper-pagination-bullet {
