--- a/scss/style.scss
+++ b/scss/style.scss
@@ -255,6 +255,7 @@ header {
             visibility: visible;
             @include flex-container;
             height: 100px;
+            background-color: white;
         }
     }
 
@@ -284,12 +285,24 @@ header {
 .element {
     position: absolute;
     left: -20px;
-    top: 8rem;
+    top: 1rem;
 
     img {
         object-fit: contain;
-        height: 115px;
-        width: 131px;
+        height: 100px;
+        width: 100px;
+    }
+
+    @include media-md {
+        position: absolute;
+        left: -20px;
+        top: 8rem;
+
+        img {
+            object-fit: contain;
+            height: 115px;
+            width: 131px;
+        }
     }
 }
 
@@ -315,7 +328,6 @@ header {
             @include flex-container;
             justify-content: start;
             flex-flow: column wrap;
-            padding: 10px 16px 10px 10px;
             height: 40rem;
             text-align: center;
 
@@ -323,15 +335,18 @@ header {
 
 
             &_text {
+                padding: 0 10px 0 10px;
+
                 h1 {
-                    font-size: 25px;
-                    line-height: 60px;
+                    font-size: 20px;
+                    line-height: 50px;
                 }
 
                 h2 {
-                    margin-top: 30px;
+                    margin-top: 20px;
                     font-size: 16px;
-                    line-height: 24px;
+                    line-height: 26px;
+                    color: #7D7987;
                 }
 
 
@@ -349,7 +364,8 @@ header {
                     h2 {
                         font-size: 16px;
                         line-height: 27px;
-                        width: 17rem;
+                        width: 16rem;
+                        color: #7D7987;
                     }
                 }
 
@@ -413,9 +429,13 @@ header {
 
             &_button {
                 position: absolute;
-                bottom: 3rem;
+                bottom: 0;
+                border-radius: 40px;
 
+                
+              
                 button {
+                     position: relative;
                     padding: 12px 30px 12px 30px;
                     background-color: $primaryColor;
                     color: white;
@@ -426,14 +446,68 @@ header {
                     font-weight: 500;
                     cursor: pointer;
                     border: none;
-                }
 
+                    
+                    &:hover {
+                        @include transition-ease;
+                        background-color: #3772C2;
+                    }
+
+                    &::after {
+                        content: "";
+                        display: block;
+                        position: absolute;
+                        border-radius: 4em;
+                        left: 0;
+                        top:0;
+                        width: 100%;
+                        height: 100%;
+                        opacity: 0;
+                        @include transition-ease;
+                        box-shadow: 0 0 10px 40px #3772C2;
+                      }
+                      
+                      &:active:after {
+                        box-shadow: 0 0 0 0 white;
+                        position: absolute;
+                        border-radius: 4em;
+                        left: 0;
+                        top:0;
+                        opacity: 1;
+                        transition: 0s;
+                        
+                      }
+                      
+                      &:active {
+                        top: 0;
+                      
+                       
+                      }
+                }
 
                 @include media-md {
                     top: 13rem;
+                    @include flex-container;
+                    flex-direction: row;
+                    text-align: center;
+
+
+
+                    button {
+                        width: 190px;
+                        height: 50px;
+                        padding: 12px 20px 12px 20px;
+                        border-radius: 55px;
+                        font-weight: 500;
+                        font-size: 16px;
+                        background: #458FF6;
+
+                        
+                    }
                 }
 
                 @include media-lg {
+                    top: 13rem;
                     @include flex-container;
                     flex-direction: row;
                     text-align: center;
@@ -449,10 +523,7 @@ header {
                         font-size: 18px;
                         background: #458FF6;
 
-                        &:hover {
-                            @include transition-ease;
-                            background-color: #3772C2;
-                        }
+                        
                     }
                 }
             }
@@ -527,12 +598,12 @@ header {
 
     &_item {
 
-        padding: 10px 16px 10px 10px;
         @include flex-container;
         flex-flow: column wrap;
 
 
         &_heading {
+          
             @include flex-container;
             flex-flow: column wrap;
             text-align: center;
@@ -540,7 +611,7 @@ header {
 
             h1 {
                 font-weight: 700;
-                font-size: 36px;
+                font-size: 26px;
                 line-height: 56px;
             }
 
@@ -551,10 +622,12 @@ header {
             }
 
             h2 {
+                padding: 0 20px 0 20px;
                 text-align: center;
                 margin-top: 35px;
                 font-size: 16px;
                 line-height: 24px;
+                color: #7D7987;
             }
 
 
@@ -572,6 +645,7 @@ header {
 
 
                 h2 {
+                    padding: 0;
                     font-weight: 300;
                     font-size: 18px;
                     line-height: 30px;
@@ -601,19 +675,20 @@ header {
             margin-top: 50px;
             margin-bottom: 50px;
             width: 100%;
-            max-width: 92.5vw;
-            margin-left: 0;
+            max-width: 100vw;
 
 
 
             &_slide {
                 margin: 0 30px;
                 overflow: hidden;
-                padding: 40px 15px 40px 15px;
+                padding: 40px 15px 45px 15px;
             }
 
             .card {
-                @include transition-ease;
+                @include flex-container;
+
+
 
 
                 &_content {
@@ -623,8 +698,8 @@ header {
                     flex-flow: column wrap;
                     padding-left: 10px;
                     align-items: start;
-                    width: 350px;
-                    height: 354px;
+                    width: 250px;
+                    height: 254px;
                     background: #FFFFFF;
 
                     /* drop shadow */
@@ -633,47 +708,92 @@ header {
 
 
                     &_image {
-                        margin-left: 20px;
+                        margin-left: 10px;
 
                         img {
                             object-fit: contain;
-                            height: 90px;
-                            width: 90px;
+                            height: 40px;
+                            width: 40px;
                         }
+
+
+                        @include media-md {
+                            margin-left: 20px;
+
+                            img {
+                                object-fit: contain;
+                                height: 90px;
+                                width: 90px;
+                            }
+                        }
+
                     }
 
                     div {
+                        margin-left: 10px;
+                        margin-top: 30px;
+                        width: 200px;
                         margin-left: 20px;
-                        margin-top: 40px;
-                        width: 280px;
 
                         h2 {
-                            font-size: 24px;
-                            line-height: 56px;
+                            font-size: 16px;
+                            line-height: 46px;
                         }
 
                         h3 {
                             font-weight: 300;
-                            font-size: 16px;
-                            line-height: 28px;
+                            font-size: 13px;
+                            line-height: 25px;
 
                             /* or 175% */
 
                             color: #7D7987;
                         }
 
+
+                        @include media-md {
+                            margin-left: 20px;
+                            margin-top: 40px;
+
+                            h2 {
+                                font-size: 24px;
+                                line-height: 56px;
+                            }
+
+                            h3 {
+                                font-weight: 300;
+                                font-size: 16px;
+                                line-height: 28px;
+
+                                /* or 175% */
+
+                                color: #7D7987;
+                            }
+
+
+                        }
+
                     }
+
+
+
+                    @include media-md {
+                        width: 350px;
+                        height: 354px;
+                    }
+
+
                 }
 
-                @include media-md {
-                    margin-left: 40px;
-                    margin-right: 40px;
-                }
+                @include media-md {}
 
 
             }
 
 
+            @include media-md {
+                max-width: 92vw;
+            }
         }
 
 
@@ -700,7 +820,7 @@ header {
         }
 
         .swiper-button-next {
-            right: 0;
+            right: -8px;
         }
 
         .swiper-button-prev {
